feat(script): Add CLI support and improve conversion script usability
- Add argparse for command-line argument handling in run_conversion.py
- Implement flexible input modes: interactive and non-interactive
- Add new CLI options for source directory, output directory, and dataset ID
- Support custom processing modes via command-line arguments
- Add `--no_input` flag for batch processing and automation
- Update usage documentation with new CLI parameters and examples
- Enhance script flexibility for different deployment scenarios
- Provide quick training command suggestion in output

--- a/script/使用说明.md
+++ b/script/使用说明.md
@@ -8,6 +8,12 @@ python script/run_conversion.py
 
 # 或直接使用最佳模式
 python script/convert_bph_pca_to_nnunet.py --mode similarity_fill
+
+# 无交互模式运行（适合批处理）
+python script/run_conversion.py --mode similarity_fill --no_input
+
+# 指定自定义路径
+python script/run_conversion.py --source_dir /path/to/data --output_dir /path/to/output
 ```
 
 ## 🔧 处理模式
@@ -54,12 +60,24 @@ python script/convert_bph_pca_to_nnunet.py --mode strict_5
 
 ## 📊 参数说明
 
+### convert_bph_pca_to_nnunet.py 参数
+
 | 参数 | 默认值 | 说明 |
 |------|--------|------|
 | `--source_dir` | `data/BPH-PCA` | 源数据目录 |
 | `--output_dir` | `nnUNet_raw` | 输出目录 |
 | `--dataset_id` | `1` | 数据集ID |
 | `--mode` | `similarity_fill` | 处理模式 |
+
+### run_conversion.py 参数
+
+| 参数 | 默认值 | 说明 |
+|------|--------|------|
+| `--source_dir` | `data/BPH-PCA` | 源数据目录 |
+| `--output_dir` | `nnUNet_raw` | 输出目录 |
+| `--dataset_id` | `1` | 数据集ID |
+| `--mode` | 交互选择 | 处理模式 |
+| `--no_input` | `False` | 无交互模式，使用默认设置 |
 
 ## 📁 输出结果
 
@@ -85,6 +103,9 @@ nnUNetv2_plan_and_preprocess -d 1
 
 # 3. 训练
 nnUNetv2_train 1 3d_fullres 0
+
+# 4. 快速训练（保存npz文件用于推理）
+nnUNetv2_train 1 3d_fullres 0 --npz
 ```
 
 ## 🎯 推荐配置
@@ -94,3 +115,8 @@ nnUNetv2_train 1 3d_fullres 0
 - 通道数一致（5通道）
 - 保留T2加权信息，效果最佳
 - 训练稳定性好
+
+**批处理推荐**: 使用 `run_conversion.py` 的 `--no_input` 参数
+- 适合自动化脚本
+- 无需用户交互
+- 可以集成到更大的工作流中
